--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,5 @@
 group 'com.famproperties.amazon_s3_cognito'
-version '1.0-SNAPSHOT'
+version '0.3.0'
 
 buildscript {
     ext.kotlin_version = '1.3.10'
@@ -41,6 +41,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.amazonaws:aws-android-sdk-core:2.16.4'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.16.4'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.19.1'
+    implementation 'com.amazonaws:aws-android-sdk-s3:2.19.1'
 }
