--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,13 @@
 name: amazon_s3_cognito
 description: This plugin allows users to list files, upload and delete image for amazon s3 cognito
-version: 0.3.0
-author: fäm properties <fateh@famproperties.com>
+version: 0.4.0
 homepage: https://github.com/prachiFam/amazon_s3_cognito
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  # Flutter versions prior to 1.12 did not support the
+  # flutter.plugin.platforms map.
+  flutter: ">=1.12.0 <2.0.0"
 
 dependencies:
   flutter:
@@ -25,8 +27,11 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.famproperties.amazon_s3_cognito
-    pluginClass: AmazonS3CognitoPlugin
+    platforms:
+      android:
+        package: com.famproperties.amazon_s3_cognito
+        pluginClass: AmazonS3CognitoPlugin
+
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
