--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: amazon_s3_cognito
 description: This plugin allows users to list files, upload and delete image for amazon s3 cognito
-version: 0.4.0
-homepage: https://github.com/prachiFam/amazon_s3_cognito
+version: 0.4.2
+homepage: https://github.com/prachiFam/amazon_s3_cognyito
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -31,6 +31,9 @@ flutter:
       android:
         package: com.famproperties.amazon_s3_cognito
         pluginClass: AmazonS3CognitoPlugin
+      ios:
+        pluginClass: AmazonS3CognitoPlugin
+
 
 
   # To add assets to your plugin package, add an assets section, like this:
