fixes to android embedding deprecated

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,16 @@
 group 'com.famproperties.amazon_s3_cognito'
-version '0.3.0'
+version '0.3.1'
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.5.30'
     repositories {
         google()
+        mavenCentral()
         mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.3'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -18,6 +19,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        mavenCentral()
     }
 }
 
@@ -25,13 +27,22 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 34
+    compileSdkVersion 31
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
@@ -43,4 +54,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.amazonaws:aws-android-sdk-core:2.32.0'
     implementation 'com.amazonaws:aws-android-sdk-s3:2.32.0'
+//    implementation 'com.amplifyframework:aws-storage-s3:1.28.0'
+//    implementation 'com.amplifyframework:aws-auth-cognito:1.28.0'
 }
